layout bug fix

--- a/css/index.less
+++ b/css/index.less
@@ -130,7 +130,6 @@ img {
     position: fixed;
 
     z-index: 20;
-    display: none;
 }
 
 /*********/
@@ -268,12 +267,10 @@ img {
     border-bottom: 1px solid #dcdcdc;
 
     /* appear and disapprar animated */
-    display: block;
 
     .transition(all 0.3s ease);
     .opacity(0);
     margin-top: -100px;
-    display: none;
 
     &.show {
         .transition(all 0.3s ease);
